--- a/the-basic-of-vue-js/index.html
+++ b/the-basic-of-vue-js/index.html
@@ -3,34 +3,16 @@
 <script src="https://unpkg.com/vue@2.5.17"></script>
 
 <div id="app">
-  <p>
-    {{ items[0].name }}: {{ items[0].price }} X {{ items[0].quantity }}
-  </p>
+  <button id="b-button" v-bind:disabled="! canBuy">
+    購入
+  </button>
 </div>
   
 <script>
-  var items = [
-    {
-      name: '鉛筆',
-      price: 300,
-      quantity: 0
-    },
-    {
-      name: 'ノート',
-      price: 400,
-      quantity: 0
-    },
-    {
-      name: '消しゴム',
-      price: 500,
-      quantity: 0
-    },
-  ]
   var vm = new Vue({
-    el: '#app',
+    el: '#b-button',
     data: {
-      items: items
+      canBuy: false
     }
   })
-  window.vm
 </script>
