--- a/the-basic-of-vue-js/index.html
+++ b/the-basic-of-vue-js/index.html
@@ -3,9 +3,31 @@
 <script src="https://unpkg.com/vue@2.5.17"></script>
 
 <div id="app">
-  <p>
-    合計: {{ totalPrice }}
-  </p>
+  <ul>
+    <li v-for="item in items" v-bind:key="item.name">
+      {{ item.name }}の個数:
+      <input type="number" v-model="item.quantity" min="0">
+    </li>
+  </ul>
+  <div :style="errorMessageStyle">
+    <ul>
+      <li v-for="item in items" v-bind:key="item.name">
+        {{ item.name }}: {{ item.price}} x {{ item.quantity }} = {{ item.price * item.quantity | numberWithDelimiter}}円
+      </li>
+    </ul>
+    <p>
+      {{ items[0].name }} : {{ items[0].price }} x {{ items[0].quantity }}
+    </p>
+    <p>
+      小計: {{ totalPrice | numberWithDelimiter }}円
+    </p>
+    <p>
+      合計（税込み）: {{ totalPriceWithTax | numberWithDelimiter }}円
+    </p>
+    <p v-show="!canBuy">
+      {{ 1000 | numberWithDelimiter }}円以上からご購入いただけます
+    </p>
+  </div>
 </div>
 
 <script>
@@ -13,7 +35,7 @@
     {
       name: '鉛筆',
       price: 300,
-      quantity: 3
+      quantity: 0
     },
     {
       name: 'ノート',
@@ -23,7 +45,7 @@
     {
       name: '消しゴム',
       price: 500,
-      quantity: 1
+      quantity: 0
     },
   ]
   var vm = new Vue({
@@ -47,8 +69,17 @@
       },
       totalPriceWithTax: function () {
         return Math.floor(this.totalPrice * 1.08)
+      },
+      canBuy: function () {
+        return this.totalPrice >= 1000
+      },
+      errorMessageStyle: function () {
+        return {
+          border: this.canBuy ? '' : '1px solid red',
+          color: this.canBuy ? '' : 'red'
+        }
       }
     }
   })
-  wimdow
+  wimdow.vm = vm
 </script>
