詳細ページの実装

--- a/application-development-utilizing-vue-router/create-the-sample-application.html
+++ b/application-development-utilizing-vue-router/create-the-sample-application.html
@@ -25,7 +25,32 @@
   </div>
 </script>
 
+<script type="text/x-template" id="user-detail">
+  <div>
+    <div class="loading" v-if="loading">読込中...</div>
+    <div v-if="error" class="error">
+      {{ error }}
+    </div>
+    <div v-if="user">
+      <h2>{{ user.name }}</h2>
+      <p>{{ user.description }}</p>
+    </div>
+  </div>
+</script>
+
 <script>
+  var userData = [
+    {
+      id: 1,
+      name: 'Takuya Tejima',
+      description: '東南アジアで働くエンジニアです。'
+    },
+    {
+      id: 2,
+      name: 'Yohei Noda',
+      description: 'アウトドア・フットサルが趣味のエンジニアです。'
+    }
+  ]
 
   var getUsers = function (callback) {
     setTimeout(function () {
@@ -40,6 +65,48 @@
         }
       ])
     }, 1000)
+  }
+
+  var getUser = function (userId, callback) {
+    setTimeout(function () {
+      var filteredUsers = userData.filter(function (user) {
+        return user.id === parseInt(userId, 10)
+      })
+      callback(null, filteredUsers && filteredUsers[0])
+    }, 1000)
+  }
+
+  var UserDetail = {
+    template: '#user-detail',
+    data: function () {
+      return {
+        loading: false,
+        user: null,
+        error: null
+      }
+    },
+
+    created: function () {
+      this.fetchData()
+    },
+
+    watch: {
+      '$route': 'fetchData'
+    },
+
+    methods: {
+      fetchData: function () {
+        this.loading = true
+        getUser(this.$route.params.userId, (function (err, user) {
+          this.loading = false
+          if (err) {
+            this.error = err.toString()
+          } else {
+            this.user = user
+          }
+        }).bind(this))
+      }
+    }
   }
 
   var UserList = {
@@ -75,7 +142,6 @@
         }).bind(this))
       }
     }
-
   }
 
   var router = new VueRouter({
@@ -89,6 +155,10 @@
       {
         path: '/users',
         component: UserList
+      },
+      {
+        path: '/users/:userId',
+        component: UserDetail
       }
     ]
   })
