--- a/application-development-utilizing-vue-router/create-the-sample-application.html
+++ b/application-development-utilizing-vue-router/create-the-sample-application.html
@@ -37,6 +37,28 @@
     </div>
   </div>
 </script>
+<script type="text/x-template" id="user-create">
+  <div>
+    <div class="sending" v-if="sending">Sending...</div>
+    <div>
+      <h2>新規ユーザー作成</h2>
+      <div>
+        <label>名前：　</label>
+        <input type="text" v-model="user.name">
+      </div>
+      <div>
+        <label>説明文：　</label>
+        <textarea v-model="user.description"></textarea>
+      </div>
+      <div v-if="error" class="error">
+        {{ error }}
+      </div>
+      <div>
+        <input type="button" @click="createUser" value="送信">
+      </div>
+    </div>
+  </div>
+</script>
 
 <script>
   var userData = [
@@ -74,6 +96,61 @@
       })
       callback(null, filteredUsers && filteredUsers[0])
     }, 1000)
+  }
+
+  var postUser = function (params, callback) {
+    setTimeout(function () {
+      params.id = userData.length + 1
+      userData.push(params)
+      callback(null, params)
+    }, 1000)
+  }
+
+  var UserCreate = {
+    template: '#user-create',
+    data: function () {
+      return {
+        sending: false,
+        user: this.defaultUser(),
+        error: null
+      }
+    },
+
+    created: function () {
+    },
+
+    methods: {
+      defaultUser: function () {
+        return {
+          name: '',
+          description: ''
+        }
+      },
+
+      createUser: function () {
+        if (this.user.name.trim() === '') {
+          this.error = 'Nameは必須です'
+          return
+        }
+        if (this.user.description.trim() === '') {
+          this.error = 'Descriptionは必須です'
+          return
+        }
+        postUser(this.user, (function (err, user) {
+          this.sending = false
+          if (err) {
+            this.error = err.toString()
+          } else {
+            this.error = null
+            this.user = this.defaultUser()
+            alert('新規ユーザーが登録されました')
+            this.$router.push('/users')
+          }
+        }).bind(this))
+      },
+
+
+    }
   }
 
   var UserDetail = {
@@ -155,6 +232,10 @@
       {
         path: '/users',
         component: UserList
+      },
+      {
+        path: '/users/new',
+        component: UserCreate
       },
       {
         path: '/users/:userId',
